<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ghost_v5_interfaces</name>
  <version>0.0.0</version>
  <description>Core libraries for working with VEX V5</description>
  <maintainer email="jessemaxxwilson@utexas.edu">maxx</maintainer>
  <license>GPLv3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>ghost_util</depend>
  <depend>ghost_estimation</depend>
  <depend>ghost_control</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
