<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ghost_description</name>
  <version>1.0.0</version>
  <description>Contains robot description for VEXU Ghost</description>
  <maintainer email="jessemaxxwilson@utexas.edu">maxx</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>xacro</build_depend>

  <depend>ament_index_cpp</depend>
  <depend>urdfdom</depend>
  <depend>ghost_common</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
